# aegis-zero-trust-agentic

./: .editorconfig  .gitignore  .mcp.json.example  CLAUDE.md  Makefile  README.md  catalog-info.yaml  mkdocs.yml
.claude/: settings.json
docs/: PRD.md  SESSION-HANDOFF-2026-06-16.md  architecture.md  from-idea-to-platform.md  install-guide.md  jit-sub-identity.md  swot.md  threat-model.md
environment/: .env.example  clusters.yaml
gitops/: README.md  app-of-apps.yaml  kustomization.yaml
grants/: 0308a1f3-34bb-48fb-9c19-1575b45ead5c.yaml  033d952e-7fa0-46a2-8321-17d63c760a8c.yaml  03e743a9-aa38-40f3-80a0-fb002cf0d214.yaml  0a35e3a6-072a-43a1-a3da-c847a592d8f3.yaml  0b806ed7-e20c-464c-8bec-1fd4b9c7ab24.yaml  0fbd4427-009a-48fa-8cc9-b828905f6233.yaml  (+40 more)
services/agent-sandbox/agent-harness/: Dockerfile  Dockerfile.native-brain  pyproject.toml  requirements.txt
services/agent-sandbox/agent-harness/.claude/skills/list-firewall-rules/: SKILL.md
services/agent-sandbox/agent-harness/.claude/skills/openshift-troubleshoot/: SKILL.md
services/agent-sandbox/agent-harness/.claude/skills/pfsense-firewall/: SKILL.md
services/agent-sandbox/agent-harness/src/agent_harness/: __init__.py  agent_runner.py  maas_brain_proxy.py  svid_bearer.py
services/agent-sandbox/agent-harness/tests/: test_agent_runner.py  test_svid_bearer.py
services/approval-console/: Dockerfile  pyproject.toml
services/approval-console/deploy/base/: deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy-launcher.yaml  networkpolicy.yaml  oauth2-secret.example.yaml  pvc-agent-store.yaml  rbac-agent-sandbox-exec.yaml  rbac-openshell-exec.yaml  rbac.yaml  route.yaml  service.yaml  serviceaccount.yaml
services/approval-console/deploy/overlays/anaeem/: deployment-patch.yaml  kustomization.yaml
services/approval-console/src/approval_console/: __init__.py  app.py  config.py
services/approval-console/src/approval_console/agents/: __init__.py  models.py  reaper.py  routes.py  store.py
services/approval-console/src/approval_console/gitea/: __init__.py  client.py  models.py
services/approval-console/src/approval_console/skills/: __init__.py  loader.py  routes.py
services/approval-console/src/approval_console/ui/: __init__.py  fragments.py  routes.py
services/approval-console/src/approval_console/webshell/: __init__.py  bridge.py  routes.py
services/approval-console/tests/: test_agents.py  test_app.py  test_gitea_client.py  test_skills.py  test_ui.py  test_webshell.py
services/echo-mcp/: Dockerfile  pyproject.toml
services/echo-mcp/src/echo_mcp/: __init__.py  server.py
services/jit-approver/: Dockerfile  README.md  pyproject.toml
services/jit-approver/deploy/base/: deployment.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  route-api.yaml  route.yaml  service.yaml  serviceaccount.yaml
services/jit-approver/deploy/overlays/anaeem/: deployment-patch.yaml  kustomization.yaml
services/jit-approver/src/jit_approver/: __init__.py  api.py  audit.py  gitea.py  ledger.py  mint_core.py  models.py  openshell.py  reaper.py  signing.py  store.py  vault.py  webhook.py
services/jit-approver/src/jit_approver/osh/: datamodel_pb2_grpc.py  inference_pb2.py  inference_pb2_grpc.py  openshell_pb2.py  openshell_pb2_grpc.py
services/jit-approver/src/jit_approver/persistence/: __init__.py  base.py  memory.py  postgres.py  schema.sql
services/jit-approver/tests/: test_api.py  test_ledger.py  test_mint.py  test_persistence.py  test_sandbox_binding.py
(+649 files in other folders)
