[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jit-approver"
version = "0.1.0"
description = "JIT escalation approver — Gitea-PR-as-approval for short-lived K8s credentials"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "nvidia-ida team" }]

dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.9.1",
    "PyYAML==6.0.2",
    # N1: RS256 session-JWT minting + JWKS for the dangerous-tool gate (UC2).
    "PyJWT==2.10.1",
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
metrics = ["prometheus-client>=0.21.0"]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "respx==0.21.1",
    "httpx==0.28.1",
    "anyio[trio]>=4.0",
]

[project.scripts]
jit-approver = "jit_approver.api:main"

[tool.hatch.build.targets.wheel]
packages = ["src/jit_approver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.hatch.envs.default]
python = "3.12"
